--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,22 +30,23 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.type =com.alibaba.druid.pool.DruidDataSource
 
-spring.datasource.druid.url=jdbc:mysql://192.168.0.103:3306/flashsale?useUnicode=true&characterEncoding=utf-8&useReadAheadInput=false&useUnbufferedInput=false&connectTimeout=6000&socketTimeout=300000&useOldAliasMetadataBehavior=true&nullCatalogMeansCurrent=true&serverTimezone=Asia/Shanghai&useSSL=false
+spring.datasource.druid.url=jdbc:mysql://192.168.27.128:3306/flashsale?useUnicode=true&characterEncoding=utf-8&useReadAheadInput=false&useUnbufferedInput=false&connectTimeout=6000&socketTimeout=300000&useOldAliasMetadataBehavior=true&nullCatalogMeansCurrent=true&serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
 spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.druid.db-type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
 spring.datasource.druid.filters=stat
 #最大活动连接
-spring.datasource.druid.max-active=2
+spring.datasource.druid.max-active=1000
 #初始大小
-spring.datasource.druid.initial-size=1
+spring.datasource.druid.initial-size=100
 # 配置获取连接等待超时的时间
 spring.datasource.druid.max-wait=60000
 # 最小活动链接
-spring.datasource.druid.min-idle=1
+spring.datasource.druid.min-idle=500
 # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.druid.time-between-eviction-runs-millis=60000
 # 配置一个连接在池中最小生存的时间，单位是毫秒
@@ -57,3 +58,16 @@ spring.datasource.druid.test-on-return=false
 # 打开PSCache，并且指定每个连接上PSCache的大小
 spring.datasource.druid.pool-prepared-statements=true
 spring.datasource.druid.max-open-prepared-statements=20
+
+#redis
+redis.host=192.168.27.128
+redis.port=6379
+#连接超时时间
+redis.timeout=10
+redis.password=123456
+redis.database=0
+#最大连接池
+redis.poolMaxActive=1000
+redis.poolMaxIdle=500
+#最大等待
+redis.poolMaxWait=500
